# pre-release.exiv2.org

./: CNAME  PreRelease.graffle  README-CONAN.html  README.html  archive.html  buildServer.html  changelog.html  conversion.html  download.html  examples.html  getting-started.html  index.html  iptc.html  makernote.html  manpage-v27.html  manpage.html  metadata.html  rss.xml  sample.html  tags-canon.html  tags-casio.html  tags-fujifilm.html  tags-minolta.html  tags-nikon.html  tags-olympus.html  tags-panasonic.html  tags-pentax.html  tags-samsung.html  tags-sigma.html  tags-sony.html  tags-xmp-GPano.html  tags-xmp-MP.html  tags-xmp-MicrosoftPhoto.html  tags-xmp-acdsee.html  tags-xmp-aux.html  tags-xmp-crs.html  tags-xmp-crss.html  tags-xmp-dc.html  tags-xmp-dcterms.html  tags-xmp-digiKam.html  (+24 more)
book/: CMakeLists.txt  Exiv2.css  IMaEA.css  IMaEA.md  book.graffle  create_tiff.cpp  csv.cpp  dmpf.cpp  export.sh  mdump.py  parse.cpp  tcp++.cpp  tvisitor.cpp  visitor.cpp
doc/: addmoddel_8cpp-example.html  annotated.html  asfvideo_8hpp.html  bmpimage_8hpp.html  classExiv2_1_1AnyError-members.html  classExiv2_1_1AnyError.html  classExiv2_1_1AnyError__inherit__graph.map  classExiv2_1_1AnyError__inherit__graph.md5  classExiv2_1_1AsciiValue-members.html  classExiv2_1_1AsciiValue.html  classExiv2_1_1AsciiValue__inherit__graph.map  classExiv2_1_1AsfVideo-members.html  classExiv2_1_1AsfVideo.html  classExiv2_1_1AsfVideo__inherit__graph.map  classExiv2_1_1AsfVideo__inherit__graph.md5  classExiv2_1_1BasicError-members.html  classExiv2_1_1BasicError.html  classExiv2_1_1BasicError__inherit__graph.map  classExiv2_1_1BasicError__inherit__graph.md5  classExiv2_1_1BasicIo-members.html  classExiv2_1_1BasicIo.html  classExiv2_1_1BasicIo__inherit__graph.map  classExiv2_1_1BmffImage-members.html  classExiv2_1_1BmffImage.html  classExiv2_1_1BmffImage__inherit__graph.map  classExiv2_1_1BmpImage-members.html  classExiv2_1_1BmpImage.html  classExiv2_1_1BmpImage__inherit__graph.map  classExiv2_1_1CommentValue-members.html  classExiv2_1_1CommentValue.html  classExiv2_1_1CommentValue_1_1CharsetInfo-members.html  classExiv2_1_1CommentValue_1_1CharsetInfo.html  classExiv2_1_1CommentValue__inherit__graph.map  classExiv2_1_1Cr2Image-members.html  classExiv2_1_1Cr2Image.html  classExiv2_1_1Cr2Image__inherit__graph.map  classExiv2_1_1Cr2Parser-members.html  classExiv2_1_1Cr2Parser.html  classExiv2_1_1CrwImage-members.html  classExiv2_1_1CrwImage.html  (+415 more)
include/: exiv2.css
